--- a/mascotas.html
+++ b/mascotas.html
@@ -14,16 +14,35 @@
         <h1>MY PEST</h1>
     </header>
     <hr>
-    <section class="galeria">
-        <h2>Galeria</h2>
-        <div class="grid-galeria">
-            <img src="Imagenes/Max.jfif" alt="img de max">
-            <img src="Imagenes/Cosito.jfif" alt="img de cosito">
-            <img src="Imagenes/Loy.jfif" alt="img de Loy">
-            <img src="Imagenes/pinguino.jfif" alt="img de pinguino">
-            <img src="Imagenes/panda.webp" alt="img de panda">
-            <img src="Imagenes/mono.jpg" alt="img de mono">
-        </div>
+    <section>
+        <h2>Max</h2>
+        <img src="Imagenes/Max.jfif" alt="Image of max" width="400">
+        <article>
+            <p>My son Max is a very spoiled and playful dog,he's very loyal
+                and depends a lot on my mom and me. He bites a anyone he doesn't know,
+                but he still brightens our lives every single day.
+            </p>
+        </article>
+    </section>
+    <hr>
+    <section>
+        <h2>Cosito</h2>
+        <img src="Imagenes/Cosito.jfif" alt="Image of cosito" width="400">
+        <article>
+            <p>My son cosito is small,cute,and always full of energy.
+                He loves running and eating snacks.
+            </p>
+        </article>
+    </section>
+    <hr>
+    <section>
+        <h2>Loy</h2>
+        <img src="Imagenes/Loy.jfif" alt="Image of loy" width="400">
+        <article>
+            <p>He is my aunt dog,but he lives with us. He is very sweet,
+                playful,and loves being around everyone at home.
+            </p>
+        </article>
     </section>
     <a href="index.html">Back to index.html</a>
 </body>
